@@ -484,3 +484,7 @@ If using specific integrations:
 * ActiveRecord[http://rubyonrails.org] integration: 2.0.0 or later
 * DataMapper[http://datamapper.org] integration: 0.9.4 or later
 * Sequel[http://sequel.rubyforge.org] integration: 2.8.0 or later
+
+If graphing state machine:
+
+* ruby-graphviz[http://github.com/glejeune/Ruby-Graphviz]: 0.9.0 or later
