@@ -776,6 +776,7 @@ end
 begin
   # Load library
   require 'rubygems'
+  gem 'ruby-graphviz', '>=0.9.0'
   require 'graphviz'
   
   class GuardDrawingTest < Test::Unit::TestCase
@@ -904,5 +905,5 @@ begin
     end
   end
 rescue LoadError
-  $stderr.puts 'Skipping GraphViz StateMachine::Guard tests. `gem install ruby-graphviz` and try again.'
+  $stderr.puts 'Skipping GraphViz StateMachine::Guard tests. `gem install ruby-graphviz` >= v0.9.0 and try again.'
 end
