@@ -666,6 +666,7 @@ end
 begin
   # Load library
   require 'rubygems'
+  gem 'ruby-graphviz', '>=0.9.0'
   require 'graphviz'
   
   class StateDrawingTest < Test::Unit::TestCase
@@ -790,5 +791,5 @@ begin
     end
   end
 rescue LoadError
-  $stderr.puts 'Skipping GraphViz StateMachine::State tests. `gem install ruby-graphviz` and try again.'
+  $stderr.puts 'Skipping GraphViz StateMachine::State tests. `gem install ruby-graphviz` >= v0.9.0 and try again.'
 end
